# klave-musig2-app

./: Cargo.toml  klave.json
apps/klave-musig2-app/: Cargo.toml
apps/klave-musig2-app/src/: bindings.rs  musig_agg.rs
apps/klave-musig2-app/wit/: world.wit
ui/assets/: index-BbTZgOPh.js
